--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,11 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/node": "^22.12.0",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts"
   }
 }
